CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(DRAGONSCURSE)

SET(CMAKE_MODULE_PATH ${DRAGONSCURSE_SOURCE_DIR}/cmake)
FIND_PACKAGE(SDL REQUIRED)
FIND_PACKAGE(SDL_image REQUIRED)
FIND_PACKAGE(TinyXML REQUIRED)

SET(CMAKE_C_FLAGS -Wall)
INCLUDE_DIRECTORIES(
    ${DRAGONSCURSE_SOURCE_DIR}/../include
    ${SDL_INCLUDE_DIR}
    ${SDLIMAGE_INCLUDE_DIR}
    ${TINYXML_INCLUDE_DIR}
    )

ADD_SUBDIRECTORY(tmx)
ADD_SUBDIRECTORY(phoboz)
ADD_SUBDIRECTORY(dragonscurse)
ADD_SUBDIRECTORY(tools)

